styles.css
body {
    font-family: 'Montserrat', sans-serif;
    font-size: 16px;
    box-sizing: border-box;
    -webkit-font-smoothing: antialiased;
    margin: 0px;
}

/* NAVIGATION BAR ******************************/

.nav-bar {
	position: fixed;
    z-index: 10;
    width: 100%;
    background: white;
    padding: 10px;
    box-shadow: 0px 1px 2px 1px rgba(0,0,0,0.08);
    float: left;
    display: table;
}

.nav-bar-links {
	display: table-cell;
	vertical-align: middle;
	width: 400px;
}

.nav-bar-item {
	display: inline-block;
	color: #A5A5A5;
	text-transform: uppercase;
	margin-right: 25px;
	float: right;
	font-size: 0.9em;

	-webkit-transition: color 0.75s;  /* For Safari 3.1 to 6.0 */
	transition: color 0.75s;
}

.nav-bar-item:hover {
	color: black;
	cursor: pointer;
}

.selected {
	color: black;
}

.logo{
	display: inline-block;
	margin: 0px 0px 0px 10px;
	cursor: pointer;
	text-transform: uppercase;
	width: 3.5em;
	font-size: 2.8em;
	color: rgba(255, 255, 255, 0);
    text-shadow: 1px 1px 1px rgba(255,255,255,0.3);
     
    background: #a3231a; /* Old browsers */
	background: -moz-linear-gradient(left,  #a3231a 0%, #bf631c 20%, #bfbf1c 38%, #60a00c 61%, #1e5799 82%, #641aa5 100%); /* FF3.6+ */
	background: -webkit-gradient(linear, left top, right top, color-stop(0%,#a3231a), color-stop(20%,#bf631c), color-stop(38%,#bfbf1c), color-stop(61%,#60a00c), color-stop(82%,#1e5799), color-stop(100%,#641aa5)); /* Chrome,Safari4+ */
	background: -webkit-linear-gradient(left,  #a3231a 0%,#bf631c 20%,#bfbf1c 38%,#60a00c 61%,#1e5799 82%,#641aa5 100%); /* Chrome10+,Safari5.1+ */
	background: -o-linear-gradient(left,  #a3231a 0%,#bf631c 20%,#bfbf1c 38%,#60a00c 61%,#1e5799 82%,#641aa5 100%); /* Opera 11.10+ */
	background: -ms-linear-gradient(left,  #a3231a 0%,#bf631c 20%,#bfbf1c 38%,#60a00c 61%,#1e5799 82%,#641aa5 100%); /* IE10+ */
	background: linear-gradient(to right,  #a3231a 0%,#bf631c 20%,#bfbf1c 38%,#60a00c 61%,#1e5799 82%,#641aa5 100%); /* W3C */
	filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#a3231a', endColorstr='#641aa5',GradientType=1 ); /* IE6-9 */




      
    -webkit-background-clip: text;
    -moz-background-clip: text;
    background-clip: text;
     
}

@-moz-document url-prefix() {
	.logo {
		display: inline-block;
		margin: 0px;
		cursor: pointer;
		text-transform: uppercase;
		content: '';
		text-shadow: none;
		width: 3.4em;
	    background-image: url('logo-screenshot.png');
	}
}




/* CONTENT BELOW NAV BAR ******************************/

.cover-photo {
	width: 100%;
	margin-bottom: -5px;
	position: relative;
}

.cover-photo-container { 
   position: relative; 
   width: 100%; /* for IE 6 */
}

.section {
	background: #F3F3F3;
}

.content {
	color: black;
	position: absolute;
	width: 100%;
	top: 74px;
}

/* SECTIONS ******************************/

.section * {
	margin: 0px;
}

.section-content {
	margin: 0px auto;
	width: 80%;
	border-bottom: 1px rgb(214, 214, 214) solid;
}

.section-content h2 {
	text-transform: uppercase;
	padding-top: 60px;
	padding-bottom: 5px;
	color: #B4B4B4;
	font-size: 1.2em;
	text-align: center;
}

.section-content a {
	color: #f5404d;
	padding: 0px;
	text-decoration: none;
	cursor: pointer;
}

.section-content a:hover {
	color: #cb333e;
}

.section-content * {
	text-align: justify;
	padding-top: 30px;
	padding-bottom: 50px;
}

.section-content .large-paragraph {
	font-size: 1.7em;
	text-align: center;
	padding-bottom: 30px;
}

.section-content .contact-logo-container {
	padding-top: 0px;
	text-align: center;
}

.section-content .headshot {
	text-align: center;
	padding: 0px;
}

.section-content .headshot * {
	padding: 0px
}

.intro-section p {
	padding: 50px 0px;
}

#resume-download-form {
	padding: 0px;
}

.contact-logo {
	text-decoration: none;
	margin: 0px 25px;
}

.contact-logo img {
	padding: 0px;
}

#github-logo {
	content: url("link-icons/github.png");
}
#github-logo:hover {
	content: url("link-icons/github_hover.png");
}

#linkedin-logo {
	content: url("link-icons/linkedin.png");
}
#linkedin-logo:hover {
	content: url("link-icons/linkedin_hover.png");
}

#gmail-logo {
	content: url("link-icons/gmail.png");
}
#gmail-logo:hover {
	content: url("link-icons/gmail_hover.png");
}

/* ART THUMBNAILS ******************************/

.art-thumbnails {
	padding-top: 0px;
}

.art-thumbnail-row {
	padding-bottom: 0px
}

.art-thumbnail-container {
    display: inline-block;
    position: relative;
    width: 45%;
    padding: 0px;
    margin: 0px 2%;
}
.art-thumbnail-dummy {
    margin-top: 100%;
    padding: 0px;
}
.art-thumbnail {
    position: absolute;
    top: 0;
    bottom: 0;
    left: 0;
    right: 0;
    padding: 0px;
    width: 100%;
	height: 100%;
}

.art-thumbnail-overlay {
	z-index: 1;
	opacity: 0;
	-webkit-transition: opacity 1s;  /* For Safari 3.1 to 6.0 */
	transition: opacity 1s;
	cursor: pointer;

	background: -webkit-linear-gradient(white, cyan); /* For Safari 5.1 to 6.0 */
  	background: -o-linear-gradient(white, cyan); /* For Opera 11.1 to 12.0 */
  	background: -moz-linear-gradient(white, cyan); /* For Firefox 3.6 to 15 */
  	background: linear-gradient(white, cyan); /* Standard syntax */
}

.art-thumbnail-overlay p {
	text-align: center;
	padding: 45% 0px 0px 0px;
	-webkit-transition: padding 1s;  /* For Safari 3.1 to 6.0 */
	transition: padding 1s;
}

.art-thumbnail-overlay:hover {
	opacity: 0.6;
}

.art-thumbnail-overlay:hover p{
	padding: 25% 0px 0px 0px;
}

/* VEX ******************************/

.vex-overlay {
	height: 2000px;
	width: 100%;
}

.vex-content {
	width: 700px
}

.vex-content-image-container {
	max-width: 600px; 
	margin-top: 35px; 
	text-align: center;
}

.vex-content-image-container img {
	max-width:100%
}

